--- a/css/animations.css
+++ b/css/animations.css
@@ -1,52 +1,170 @@
-/* Principle-1 */
+/* --------------------------- Principle-1 ------------------------------ */
 @keyframes principle-1 {
-    0% {left:-200px; top:0px;}
-    20% {left:100px; top:0px;}
-    50% {left:100px; top:0px;}
-    80% {left:100px; top:0px;}
-    100% {left:400px; top:0px;}
+  0% {
+    left:-400px;
+    top:0px;
+    animation-timing-function: cubic-bezier(.41,.21,.01,.99);
+  }
+  40% {left:0px; top:0px;}
+  60% {left:0px; top:0px;}
+  80% {
+    left:0px;
+    top:0px;
+    animation-timing-function: cubic-bezier(.41,.21,.01,.99);
+   }
+  100% {left:400px; top:0px;}
 }
 
-/* Principle-1 */
-.parentContainer {
-  width: 300px;
-  height: 300px;
-  overflow: hidden;
-}
 #principle-1 .parentContainer div {
-    width: 100px;
-    height: 100px;
-    border-radius: 2px;
-    position: relative;
-    background-color: white;
-    overflow:hidden;
-
-    animation-name: principle-1;
-    animation-duration: 1s;
-    animation-timing-function: ease-in-out;
-    animation-iteration-count: infinite;
+  position: relative;
+  width: 100px;
+  height: 100px;
+  border-radius: 2px;
+  background-color: white;
+  overflow: hidden;
+  animation-duration: 3s;
+  animation-name: principle-1;
+  animation-iteration-count: infinite;
 }
 
-
-/* Principle-2 */
+/* --------------------------- Principle-2 ------------------------------ */
 @keyframes principle-2 {
-    0%   {background-color:red; left:0px; top:0px;}
-    25%  {background-color:black; left:200px; top:0px;}
-    50%  {background-color:blue; left:200px; top:200px;}
-    75%  {background-color:green; left:0px; top:200px;}
-    100% {background-color:pink; left:0px; top:0px;}
+  0% {
+    left:-400px;
+    top:0px;
+    animation-timing-function: cubic-bezier(.41,.21,.01,.99);
+  }
+  20% {left:0px; top:0px;}
+  50% {left:0px; top:0px;}
+  80% {
+    left:0px;
+    top:0px;
+    animation-timing-function: cubic-bezier(.41,.21,.01,.99);
+   }
+  100% {left:400px; top:0px;}
 }
 
-/* Principle-1 */
-#principle-2 div {
+#principle-2 .parentContainer {
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
+}
+
+#principle-2 .parentContainer div {
+  position: relative;
+  width: 240px;
+  height: 50px;
+  border-radius: 2px;
+  background-color: white;
+  overflow: hidden;
+  animation-duration: 2s;
+  animation-name: principle-2;
+  animation-iteration-count: infinite;
+}
+
+#principle-2 .parentContainer div:nth-child(3) {
+  animation-delay: 200ms;
+  animation-name: principle-2;
+  animation-iteration-count: infinite;
+}
+
+/* --------------------------- Principle-3 ------------------------------ */
+@keyframes principle-3-parent {
+  from {
+    transform: scale(1) translateX(-100px);
+    animation-timing-function: cubic-bezier(.41,.21,.01,.99);
+  }
+  to {
+    transform: scale(1) translateX(100px);
+    animation-timing-function: cubic-bezier(.41,.21,.01,.99);
+  }
+}
+
+@keyframes principle-3 {
+  from {
+    transform: scale(0.3);
+    animation-timing-function: cubic-bezier(.41,.21,.01,.99);
+  }
+  to {
+    transform: scale(1);
+    animation-timing-function: cubic-bezier(.41,.21,.01,.99);
+  }
+}
+
+#principle-3 .parentContainer {
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
+  animation-duration: 1s;
+  animation-name: principle-3-parent;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+#principle-3 .parentContainer div {
+  position: relative;
+  width: 205px;
+  height: 50px;
+  border-radius: 2px;
+  background-color: white;
+  overflow: hidden;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+#principle-3 .parentContainer div:nth-child(1) {
+  animation-name: principle-3;
+  transform-origin: bottom center;
+}
+
+/* --------------------------- Principle-4 ------------------------------ */
+@keyframes principle-4 {
+  0% {
     width: 100px;
     height: 100px;
-    position: relative;
-    background-color: red;
-    animation-name: principle-2;
-    animation-duration: 2s;
-    animation-timing-function: ease-in-out;
-    animation-delay: 2s;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
+    border-radius: 200px;
+    transform: scale(0.5);
+    animation-timing-function: cubic-bezier(.41,.21,.01,.99)
+  }
+  20% {
+    width: 100px;
+    height: 100px;
+    border-radius: 200px;
+    transform: scale(0.5);
+    animation-timing-function: cubic-bezier(.41,.21,.01,.99)
+  }
+  60% {
+    width: 300px;
+    height: 100px;
+    border-radius: 3px;
+    transform: scale(1);
+    animation-timing-function: cubic-bezier(.41,.21,.01,.99)
+  }
+  100% {
+    width: 300px;
+    height: 100px;
+    border-radius: 3px;
+    transform: scale(1);
+    animation-timing-function: cubic-bezier(.41,.21,.01,.99)
+  }
+}
+
+#principle-4 .parentContainer div {
+  position: relative;
+  background-color: white;
+  overflow: hidden;
+  animation-duration: 1s;
+  animation-name: principle-4;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+/* --------------------------- Principle-5 ------------------------------ */
+
+#principle-5 .parentContainer div {
+  position: relative;
+  border-radius: 2px;
+  font-size: 100px;
+  color: white;
 }
