Added several new principles

--- a/css/animations.css
+++ b/css/animations.css
@@ -3,14 +3,12 @@
   0% {
     left:-400px;
     top:0px;
-    animation-timing-function: cubic-bezier(.41,.21,.01,.99);
   }
   40% {left:0px; top:0px;}
   60% {left:0px; top:0px;}
   80% {
     left:0px;
     top:0px;
-    animation-timing-function: cubic-bezier(.41,.21,.01,.99);
    }
   100% {left:400px; top:0px;}
 }
@@ -25,6 +23,7 @@
   animation-duration: 3s;
   animation-name: principle-1;
   animation-iteration-count: infinite;
+  animation-timing-function: cubic-bezier(.41,.21,.01,.99);
 }
 
 /* --------------------------- Principle-2 ------------------------------ */
@@ -32,14 +31,12 @@
   0% {
     left:-400px;
     top:0px;
-    animation-timing-function: cubic-bezier(.41,.21,.01,.99);
   }
   20% {left:0px; top:0px;}
   50% {left:0px; top:0px;}
   80% {
     left:0px;
     top:0px;
-    animation-timing-function: cubic-bezier(.41,.21,.01,.99);
    }
   100% {left:400px; top:0px;}
 }
@@ -60,34 +57,32 @@
   animation-duration: 2s;
   animation-name: principle-2;
   animation-iteration-count: infinite;
+  animation-timing-function: cubic-bezier(.41,.21,.01,.99);
 }
 
 #principle-2 .parentContainer div:nth-child(3) {
   animation-delay: 200ms;
   animation-name: principle-2;
   animation-iteration-count: infinite;
+  animation-timing-function: cubic-bezier(.41,.21,.01,.99);
 }
 
 /* --------------------------- Principle-3 ------------------------------ */
 @keyframes principle-3-parent {
   from {
     transform: scale(1) translateX(-100px);
-    animation-timing-function: cubic-bezier(.41,.21,.01,.99);
   }
   to {
     transform: scale(1) translateX(100px);
-    animation-timing-function: cubic-bezier(.41,.21,.01,.99);
   }
 }
 
 @keyframes principle-3 {
   from {
     transform: scale(0.3);
-    animation-timing-function: cubic-bezier(.41,.21,.01,.99);
   }
   to {
     transform: scale(1);
-    animation-timing-function: cubic-bezier(.41,.21,.01,.99);
   }
 }
 
@@ -99,6 +94,7 @@
   animation-name: principle-3-parent;
   animation-iteration-count: infinite;
   animation-direction: alternate;
+  animation-timing-function: cubic-bezier(.41,.21,.01,.99);
 }
 
 #principle-3 .parentContainer div {
@@ -108,13 +104,14 @@
   border-radius: 2px;
   background-color: white;
   overflow: hidden;
-  animation-duration: 1s;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
 }
 
 #principle-3 .parentContainer div:nth-child(1) {
   animation-name: principle-3;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: cubic-bezier(.41,.21,.01,.99);
   transform-origin: bottom center;
 }
 
@@ -125,28 +122,24 @@
     height: 100px;
     border-radius: 200px;
     transform: scale(0.5);
-    animation-timing-function: cubic-bezier(.41,.21,.01,.99)
   }
   20% {
     width: 100px;
     height: 100px;
     border-radius: 200px;
     transform: scale(0.5);
-    animation-timing-function: cubic-bezier(.41,.21,.01,.99)
   }
   60% {
     width: 300px;
     height: 100px;
     border-radius: 3px;
     transform: scale(1);
-    animation-timing-function: cubic-bezier(.41,.21,.01,.99)
   }
   100% {
     width: 300px;
     height: 100px;
     border-radius: 3px;
     transform: scale(1);
-    animation-timing-function: cubic-bezier(.41,.21,.01,.99)
   }
 }
 
@@ -158,6 +151,7 @@
   animation-name: principle-4;
   animation-iteration-count: infinite;
   animation-direction: alternate;
+  animation-timing-function: cubic-bezier(.41,.21,.01,.99);
 }
 
 /* --------------------------- Principle-5 ------------------------------ */
@@ -165,6 +159,195 @@
 #principle-5 .parentContainer div {
   position: relative;
   border-radius: 2px;
-  font-size: 100px;
+  font-size: 150px;
   color: white;
+}
+
+/* --------------------------- Principle-6 ------------------------------ */
+@keyframes principle-6 {
+  0% {
+    width: 100px;
+    height: 100px;
+    transform: scale(0.5);
+  }
+  20% {
+    width: 100px;
+    height: 100px;
+    transform: scale(0.5);
+  }
+  60% {
+    width: 300px;
+    height: 100px;
+    transform: scale(1);
+  }
+  100% {
+    width: 300px;
+    height: 100px;
+    transform: scale(1);
+  }
+}
+
+#principle-6 .parentContainer div:nth-child(2) {
+  position: relative;
+  background-color: white;
+  border-radius: 3px;
+  z-index: 1;
+  animation-duration: 1s;
+  animation-name: principle-6;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: cubic-bezier(.41,.21,.01,.99);
+}
+
+#principle-6 .parentContainer div:nth-child(1) {
+  position: relative;
+  background-color: black;
+  opacity: 0.5;
+  width: 300px;
+  height: 100px;
+  border-radius: 3px;
+  position: absolute;
+  z-index: 0;
+}
+
+/* --------------------------- Principle-7 ------------------------------ */
+@keyframes principle-7 {
+  0% {
+    transform: translate(0px);
+  }
+  30% {
+    transform: translate(0px);
+  }
+  80% {
+    transform: translate(50px);
+  }
+  100% {
+    transform: translate(50px);
+  }
+}
+
+#principle-7 .parentContainer div:nth-child(2) {
+  position: relative;
+  width: 100px;
+  height: 100px;
+  background-color: white;
+  border-radius: 3px;
+  z-index: 1;
+  animation-duration: 1.2s;
+  animation-name: principle-7;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: cubic-bezier(.41,.21,.01,.99);
+}
+
+#principle-7 .parentContainer div:nth-child(1) {
+  position: relative;
+  background-color: black;
+  opacity: 0.5;
+  width: 100px;
+  height: 100px;
+  border-radius: 3px;
+  position: absolute;
+  z-index: 0;
+}
+
+/* --------------------------- Principle-8 ------------------------------ */
+@keyframes principle-8-left {
+  0% {
+    transform: translate(0px);
+  }
+  30% {
+    transform: translate(0px);
+  }
+  80% {
+    transform: translate(-70px);
+  }
+  100% {
+    transform: translate(-70px);
+  }
+}
+
+@keyframes principle-8-right {
+  0% {
+    transform: translate(0px);
+  }
+  30% {
+    transform: translate(0px);
+  }
+  80% {
+    transform: translate(70px);
+  }
+  100% {
+    transform: translate(70px);
+  }
+}
+
+#principle-8 .parentContainer {
+  filter:url('#goo');
+}
+
+#principle-8 .parentContainer div:nth-child(2) {
+  position: absolute;
+  z-index: 1;
+  width: 100px;
+  height: 100px;
+  background-color: white;
+  border-radius: 300px;
+
+  animation-duration: 1.5s;
+  animation-name: principle-8-right;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000);
+}
+
+#principle-8 .parentContainer div:nth-child(1) {
+  position: absolute;
+  z-index: 2;
+  width: 100px;
+  height: 100px;
+  background-color: white;
+  border-radius: 300px;
+
+  animation-duration: 1.5s;
+  animation-name: principle-8-left;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000);
+}
+
+/* --------------------------- Principle-9 ------------------------------ */
+@keyframes principle-9 {
+  from {
+    transform: translate(-50px);
+  }
+  to {
+    transform: translate(50px);
+  }
+}
+
+#principle-9 .parentContainer div:nth-child(2) {
+  position: relative;
+  width: 100px;
+  height: 140px;
+  background-color: black;
+  opacity: 0.8;
+  border-radius: 3px;
+  z-index: 1;
+
+  animation-duration: 2s;
+  animation-name: principle-9;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: cubic-bezier(.41,.21,.01,.99);
+}
+
+#principle-9 .parentContainer div:nth-child(1) {
+  position: relative;
+  background-color: white;
+  width: 100px;
+  height: 100px;
+  border-radius: 3px;
+  position: absolute;
+  z-index: 0;
 }
