--- a/css/animations.css
+++ b/css/animations.css
@@ -155,13 +155,33 @@
 }
 
 /* --------------------------- Principle-5 ------------------------------ */
+@keyframes principle-5 {
+  from { top: 140px; }
+  to { top: 80px; }
+}
 
-#principle-5 .parentContainer div {
-  position: relative;
+#principle-5 .parentContainer div:nth-child(2) {
+  position: absolute;
   border-radius: 2px;
-  font-size: 150px;
+  font-size: 60px;
   color: white;
 }
+
+#principle-5 .parentContainer div:nth-child(1) {
+  width: 40px;
+  height: 60px;
+  transform-origin: bottom center;
+  position: relative;
+  background-color: white;
+  overflow: hidden;
+  animation-duration: 4.62s;
+  animation-name: principle-5;
+  animation-iteration-count: infinite;
+  animation-direction: normal;
+  animation-timing-function: linear;
+}
+
+
 
 /* --------------------------- Principle-6 ------------------------------ */
 @keyframes principle-6 {
@@ -539,6 +559,70 @@
   overflow: hidden;
   animation-duration: 1.5s;
   animation-name: principle-realtime-cursor;
+  animation-iteration-count: infinite;
+  animation-timing-function: cubic-bezier(.41,.21,.01,.99);
+}
+
+/* --------------------------- Principle-non-realtime ------------------------------ */
+@keyframes principle-nonrealtime {
+  0% { transform: translateX(110px);}
+  50% { transform: translateX(110px); }
+  100% { transform: translateX(110px); background-color: gray: }
+}
+
+@keyframes principle-nonrealtime-action {
+  0% { transform: rotateY(0deg);}
+  50% { transform: rotateY(0deg); }
+  100% { transform: rotateY(-180deg); }
+}
+
+@keyframes principle-nonrealtime-cursor {
+  0% {transform: scale(1); opacity: 0;}
+  40% {transform: scale(1); opacity: 0;}
+  50% {transform: scale(0.6); opacity: 1;}
+  80% {transform: scale(1); opacity: 0;}
+  100% {transform: scale(1); opacity: 0;}
+}
+
+#principle-nonrealtime .parentContainer {
+  flex-direction: row;
+  flex-wrap: nowrap;
+  perspective: 500px;
+}
+
+#principle-nonrealtime .parentContainer div:not(.cursor) {
+  flex-shrink: 0;
+  position: relative;
+  z-index: 1;
+  width: 200px;
+  height: 100px;
+  border-radius: 2px;
+  background-color: white;
+  overflow: hidden;
+  margin: 0px 10px;
+  animation-duration: 1.5s;
+  animation-name: principle-nonrealtime;
+  animation-iteration-count: infinite;
+  animation-timing-function: cubic-bezier(.41,.21,.01,.99);
+}
+
+#principle-nonrealtime .parentContainer div:nth-child(3) {
+  left: 110px;
+  animation-name: principle-nonrealtime-action;
+}
+
+#principle-nonrealtime .parentContainer div.cursor {
+  left: 40%;
+  flex-shrink: 0;
+  position: absolute;
+  width: 80px;
+  height: 80px;
+  border-radius: 200px;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 2;
+  overflow: hidden;
+  animation-duration: 1.5s;
+  animation-name: principle-nonrealtime-cursor;
   animation-iteration-count: infinite;
   animation-timing-function: cubic-bezier(.41,.21,.01,.99);
 }
